Wed Dec 19 10:19:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (getLocalQuadric): Another
	attempt to detect degenerated cases when incident triangles are
	coplanar.

Tue Dec 18 12:20:34 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/SmoothNodes2D.java (main): Copy
	geometry file into output directory.
	* src/org/jcae/mesh/amibe/ds/MMesh1D.java: Store only filename
	component into 'filename' member, geometry file is always copied
	into output directory.
	* src/org/jcae/mesh/xmldata/MeshWriter.java: triangles2d.bin file
	format is modified, but in a backward compatible way.
	Outer triangles are also written onto disk; by convention, vertex
	indices are negated for outer triangles, and outer vertex has a
	special index.  2D meshes can now be read from disk and updated.
	* src/org/jcae/mesh/xmldata/MeshToSoupConvert.java
	  src/org/jcae/mesh/xmldata/MeshReader.java
	  src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java: Update
	mesh readers accordingly.
	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Outer
	triangles may now be found in mesh list.

Release jCAE 0.15.0

Thu Dec 13 09:36:41 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/jcae.dtd: Add a 'version' attribute to
	<jcae> root element.  Writers do not set it; thus if readers found
	one, it means that files had been written by a newer version.
	An error message is reported and an exception is raised, to avoid
	hard to debug problems.
	* src/org/jcae/mesh/amibe/algos2d/BasicMesh.java
	  src/org/jcae/mesh/Mesher.java: Move call to ConstraintNormal3D
	from BasicMesh into Mesher.


Sat Dec  8 20:52:45 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: New createTetrahedron()
	method, to avoid assertion failure.
	* src/org/jcae/mesh/bora/xmldata/MESHReader.java: Call it when
	reading tetrahedra.